--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="active"><a href="home.html">Home</a></li>
                     <li><a href="reservation.html">Online Reservation</a></li>
                     <li><a href="admin.html">Admin</a></li>
                     <li><a href="review.html">Review</a></li>
